--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Questrial">
-  <link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=zocial">
-  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <link rel="stylesheet" href="https://weloveiconfonts.com/api/?family=zocial">
+  <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/picturefill.min.js"></script>
 	<title>Portfolio - Julie N. Burke</title>
