fix: Change to fontello zocial icon font

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
       </div>
       <div class="row">
         <ul class="contacts">
-          <li><a href="http://github.com/jnpj1" target="_blank" class="social-link zocial-github"></a></li>
-          <li><a href="mailto:jnb.developer@gmail.com" target="_blank" class="social-link zocial-gmail"></a></li>
+          <li><a href="http://github.com/jnpj1" target="_blank" class="social-link icon-github"></a></li>
+          <li><a href="mailto:jnb.developer@gmail.com" target="_blank" class="social-link icon-email"></a></li>
         </ul>
       </div>
     </footer>
