feat: Update links to GitHub repos and gh-pages

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               data-toggle="modal" data-target="#project1">
           </picture>
           <h3 class="text-uppercase">Resume</h3>
-          <p><a href="http://github.com/">View on GitHub</a></p>
+          <p><a href="https://github.com/jnpj1/resume" target="_blank">View on GitHub</a></p>
         </article>
         <article class="col-xs-12 col-md-6">
           <picture>
@@ -61,7 +61,7 @@
               title="More Information" data-toggle="modal" data-target="#project2">
           </picture>
           <h3 class="text-uppercase">National Park Finder</h3>
-          <p><a href="http://github.com/">View on GitHub</a></p>
+          <p><a href="https://github.com/jnpj1/national-park-finder" target="_blank">View on GitHub</a></p>
         </article>
       </section>
       <section class="row text-center">
@@ -72,7 +72,7 @@
               title="More Information" data-toggle="modal" data-target="#project3">
           </picture>
           <h3 class="text-uppercase">Girls Vs. Bugs Arcade Game</h3>
-          <p><a href="http://github.com/">View on GitHub</a></p>
+          <p><a href="https://github.com/jnpj1/arcade-game" target="_blank">View on GitHub</a></p>
         </article>
         <article class="col-xs-12 col-md-6">
           <picture>
@@ -81,7 +81,7 @@
               title="More Information" data-toggle="modal" data-target="#project4">
           </picture>
           <h3 class="text-uppercase">Cat Clicker</h3>
-          <p><a href="http://github.com/">View on GitHub</a></p>
+          <p><a href="https://github.com/jnpj1/cat-clicker" target="_blank">View on GitHub</a></p>
         </article>
       </section>
       <section class="row text-center">
@@ -92,7 +92,7 @@
               title="More Information" data-toggle="modal" data-target="#project5">
           </picture>
           <h3 class="text-uppercase">Website Performance Optimization</h3>
-          <p><a href="http://github.com/">View on GitHub</a></p>
+          <p><a href="https://github.com/jnpj1/performance-optimization" target="_blank">View on GitHub</a></p>
         </article>
         <article class="col-xs-12 col-md-6">
           <picture>
@@ -101,7 +101,7 @@
               data-toggle="modal" data-target="#project6">
           </picture>
           <h3 class="text-uppercase">Blog Image Optimization</h3>
-          <p><a href="http://github.com/">View on GitHub</a></p>
+          <p><a href="https://github.com/jnpj1/responsive-image-blog" target="_blank">View on GitHub</a></p>
         </article>
       </section>
     </main>
@@ -126,7 +126,7 @@
             <h4 class="modal-title" id="myModalLabel">Resume</h4>
           </div>
           <div class="modal-body">
-            <a href="http://github.com/" target="_blank">
+            <a href="http://jnpj1.github.io/resume/" target="_blank">
               <picture>
                 <source srcset="images/resume-small.png" media="(max-width: 700px)">
                 <img src="images/resume-large.png" class="img-responsive" alt="Resume Site" title="View on GitHub Pages">
@@ -147,7 +147,7 @@
             <h4 class="modal-title" id="myModalLabel">National Park Finder</h4>
           </div>
           <div class="modal-body">
-            <a href="http://github.com/" target="_blank">
+            <a href="https://jnpj1.github.io/national-park-finder/" target="_blank">
               <picture>
                 <source srcset="images/nationalpark2-small.png" media="(max-width: 700px)">
                 <img src="images/nationalpark2-large.png" class="img-responsive" alt="National Park App"
@@ -169,7 +169,7 @@
             <h4 class="modal-title" id="myModalLabel">Girls vs. Bugs Arcade Game</h4>
           </div>
           <div class="modal-body">
-            <a href="http://github.com/" target="_blank">
+            <a href="https://jnpj1.github.io/arcade-game/" target="_blank">
               <picture>
                 <source srcset="images/girlvsbugs2-small.png" media="(max-width: 700px)">
                 <img src="images/girlsvsbugs2-large.png" class="img-responsive" alt="Game play" title="View on GitHub Pages">
@@ -190,7 +190,7 @@
             <h4 class="modal-title" id="myModalLabel">Cat Clicker</h4>
           </div>
           <div class="modal-body">
-            <a href="http://github.com/" target="_blank">
+            <a href="https://jnpj1.github.io/cat-clicker/" target="_blank">
               <picture>
                 <source srcset="images/catclicker2-small.png" media="(max-width: 700px)">
                 <img src="images/catclicker2-large.png" class="img-responsive" alt="Cat Clicker App" title="View on GitHub Pages">
@@ -211,7 +211,7 @@
             <h4 class="modal-title" id="myModalLabel">Website Performance Optimization</h4>
           </div>
           <div class="modal-body">
-            <a href="http://github.com/" target="_blank">
+            <a href="http://jnpj1.github.io/performance-optimization/" target="_blank">
               <picture>
                 <source srcset="images/performance2-small.png" media="(max-width: 700px)">
                 <img src="images/performance2-large.png" class="img-responsive" alt="Pizza Restaurant Site" title="View on GitHub Pages">
@@ -233,7 +233,7 @@
             <h4 class="modal-title" id="myModalLabel">Blog Image Optimization</h4>
           </div>
           <div class="modal-body">
-            <a href="http://github.com/" target="_blank">
+            <a href="https://jnpj1.github.io/responsive-image-blog/" target="_blank">
               <picture>
                 <source srcset="images/blog2-small.png" media="(max-width: 700px)">
                 <img src="images/blog2-large.png" class="img-responsive" alt="Blog Site" title="View on GitHub Pages">
