fix: Add Bootstrap column to row missing one and removed media query hiding logo on small devices

--- a/index.html
+++ b/index.html
@@ -112,18 +112,20 @@
         </div>
       </div>
       <div class="row">
-        <ul class="contacts">
-          <li><a href="http://github.com/jnpj1" target="_blank" class="social-link icon-github"></a></li>
-          <li><a href="mailto:jnb.developer@gmail.com" target="_blank" class="social-link icon-email"></a></li>
-        </ul>
+        <div class="col-md-12">
+          <ul class="contacts">
+            <li><a href="http://github.com/jnpj1" target="_blank" class="social-link icon-github"></a></li>
+            <li><a href="mailto:jnb.developer@gmail.com" target="_blank" class="social-link icon-email"></a></li>
+          </ul>
+        </div>
       </div>
     </footer>
   <!-- Modals -->
-    <aside class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <aside class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title" id="myModalLabel">Resume</h4>
+            <h4 class="modal-title" id="myModalLabel1">Resume</h4>
           </div>
           <div class="modal-body">
             <a href="http://jnpj1.github.io/resume/" target="_blank">
@@ -140,11 +142,11 @@
         </div>
       </div>
     </aside>
-    <aside class="modal fade" id="project2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <aside class="modal fade" id="project2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title" id="myModalLabel">National Park Finder</h4>
+            <h4 class="modal-title" id="myModalLabel2">National Park Finder</h4>
           </div>
           <div class="modal-body">
             <a href="https://jnpj1.github.io/national-park-finder/" target="_blank">
@@ -162,16 +164,16 @@
         </div>
       </div>
     </aside>
-    <aside class="modal fade" id="project3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <aside class="modal fade" id="project3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel3" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title" id="myModalLabel">Girls vs. Bugs Arcade Game</h4>
+            <h4 class="modal-title" id="myModalLabel3">Girls vs. Bugs Arcade Game</h4>
           </div>
           <div class="modal-body">
             <a href="https://jnpj1.github.io/arcade-game/" target="_blank">
               <picture>
-                <source srcset="images/girlvsbugs2-small.png" media="(max-width: 700px)">
+                <source srcset="images/girlsvsbugs2-small.png" media="(max-width: 700px)">
                 <img src="images/girlsvsbugs2-large.png" class="img-responsive" alt="Game play" title="View on GitHub Pages">
               </picture>
             </a>
@@ -183,11 +185,11 @@
         </div>
       </div>
     </aside>
-    <aside class="modal fade" id="project4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <aside class="modal fade" id="project4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel4" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title" id="myModalLabel">Cat Clicker</h4>
+            <h4 class="modal-title" id="myModalLabel4">Cat Clicker</h4>
           </div>
           <div class="modal-body">
             <a href="https://jnpj1.github.io/cat-clicker/" target="_blank">
@@ -196,7 +198,7 @@
                 <img src="images/catclicker2-large.png" class="img-responsive" alt="Cat Clicker App" title="View on GitHub Pages">
               </picture>
             </a>
-            <p class-"modal-text">Click tracking app built with JavaScript MVC design pattern.</p>
+            <p class="modal-text">Click tracking app built with JavaScript MVC design pattern.</p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -204,11 +206,11 @@
         </div>
       </div>
     </aside>
-    <aside class="modal fade" id="project5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <aside class="modal fade" id="project5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel5" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title" id="myModalLabel">Website Performance Optimization</h4>
+            <h4 class="modal-title" id="myModalLabel5">Website Performance Optimization</h4>
           </div>
           <div class="modal-body">
             <a href="http://jnpj1.github.io/performance-optimization/" target="_blank">
@@ -217,7 +219,7 @@
                 <img src="images/performance2-large.png" class="img-responsive" alt="Pizza Restaurant Site" title="View on GitHub Pages">
               </picture>
             </a>
-            <p class-"modal-text">Optimization of existing portfolio and pizza sites to increase PageSpeed score and to achieve rendering at 60 frames
+            <p class="modal-text">Optimization of existing portfolio and pizza sites to increase PageSpeed score and to achieve rendering at 60 frames
               per second</p>
           </div>
           <div class="modal-footer">
@@ -226,11 +228,11 @@
         </div>
       </div>
     </aside>
-    <aside class="modal fade" id="project6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <aside class="modal fade" id="project6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel6" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title" id="myModalLabel">Blog Image Optimization</h4>
+            <h4 class="modal-title" id="myModalLabel6">Blog Image Optimization</h4>
           </div>
           <div class="modal-body">
             <a href="https://jnpj1.github.io/responsive-image-blog/" target="_blank">
@@ -239,7 +241,7 @@
                 <img src="images/blog2-large.png" class="img-responsive" alt="Blog Site" title="View on GitHub Pages">
               </picture>
             </a>
-            <p class-"modal-text">Optimization of existing blog site performance and image responsiveness using picture element and automated
+            <p class="modal-text">Optimization of existing blog site performance and image responsiveness using picture element and automated
               image optimizer</p>
           </div>
           <div class="modal-footer">
