feat: Update portfolio

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="col-xs-10 text-right text-uppercase col-centered intro-box">
           <h1>Julie N. Burke</h1>
-          <h4 class="accent-color">Front-End Developer</h4>
+          <h4 class="accent-color">Junior Full-Stack Developer</h4>
         </div>
       </div>
       <div class="row center-block">
@@ -67,9 +67,29 @@
       <section class="row text-center">
         <article class="col-xs-12 col-md-6">
           <picture>
+            <source srcset="images/multiuserblog-small.png" media="(max-width: 700px)">
+            <img src="images/multiuserblog-large.png" class="img-responsive center-block screenshot" alt="Multiuser Blog" title="More Information"
+              data-toggle="modal" data-target="#project3">
+          </picture>
+          <h3 class="text-uppercase">Multiuser Blog</h3>
+          <p><a href="https://github.com/jnpj1/multiuser-blog" target="_blank">View on GitHub</a></p>
+        </article>
+        <article class="col-xs-12 col-md-6">
+          <picture>
+            <source srcset="images/firebasetracker-small.png" media="(max-width: 700px)">
+            <img src="images/firebasetracker-large.png" class="img-responsive center-block screenshot" alt="Firebase Calorie Tracker App"
+              title="More Information" data-toggle="modal" data-target="#project4">
+          </picture>
+          <h3 class="text-uppercase">Calorie Tracker - Firebase Version</h3>
+          <p><a href="https://github.com/jnpj1/health-tracker-firebase" target="_blank">View on GitHub</a></p>
+        </article>
+      </section>
+      <section class="row text-center">
+        <article class="col-xs-12 col-md-6">
+          <picture>
             <source srcset="images/girlsvsbugs-small.png" media="(max-width: 700px)">
             <img src="images/girlsvsbugs-large.png" class="img-responsive center-block screenshot" alt="Game play"
-              title="More Information" data-toggle="modal" data-target="#project3">
+              title="More Information" data-toggle="modal" data-target="#project5">
           </picture>
           <h3 class="text-uppercase">Girls Vs. Bugs Arcade Game</h3>
           <p><a href="https://github.com/jnpj1/arcade-game" target="_blank">View on GitHub</a></p>
@@ -78,7 +98,7 @@
           <picture>
             <source srcset="images/catclicker-small.png" media="(max-width: 700px)">
             <img src="images/catclicker-large.png" class="img-responsive center-block screenshot" alt="Cat Clicker App"
-              title="More Information" data-toggle="modal" data-target="#project4">
+              title="More Information" data-toggle="modal" data-target="#project6">
           </picture>
           <h3 class="text-uppercase">Cat Clicker</h3>
           <p><a href="https://github.com/jnpj1/cat-clicker" target="_blank">View on GitHub</a></p>
@@ -89,7 +109,7 @@
           <picture>
             <source srcset="images/performance-small.png" media="(max-width: 700px)">
             <img src="images/performance-large.png" class="img-responsive center-block screenshot" alt="Portfolio Site"
-              title="More Information" data-toggle="modal" data-target="#project5">
+              title="More Information" data-toggle="modal" data-target="#project7">
           </picture>
           <h3 class="text-uppercase">Website Performance Optimization</h3>
           <p><a href="https://github.com/jnpj1/performance-optimization" target="_blank">View on GitHub</a></p>
@@ -98,7 +118,7 @@
           <picture>
             <source srcset="images/blog-small.png" media="(max-width: 700px)">
             <img src="images/blog-large.png" class="img-responsive center-block screenshot" alt="Blog Site" title="More Information"
-              data-toggle="modal" data-target="#project6">
+              data-toggle="modal" data-target="#project8">
           </picture>
           <h3 class="text-uppercase">Blog Image Optimization</h3>
           <p><a href="https://github.com/jnpj1/responsive-image-blog" target="_blank">View on GitHub</a></p>
@@ -168,7 +188,51 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title" id="myModalLabel3">Girls vs. Bugs Arcade Game</h4>
+            <h4 class="modal-title" id="myModalLabel3">Multiuser Blog</h4>
+          </div>
+          <div class="modal-body">
+            <a href="http://multiuserblog-146317.appspot.com" target="_blank">
+              <picture>
+                <source srcset="images/multiuserblog2-small.png" media="(max-width: 700px)">
+                <img src="images/multiuserblog2-large.png" class="img-responsive" alt="Multiuser Blog"
+                  title="View on GitHub Pages">
+              </picture>
+            </a>
+            <p class="modal-text">Blog for multiple users to post, like, and comment on content. Built with Python, Jinja2, and Google App Engine.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </aside>
+    <aside class="modal fade" id="project4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel4" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title" id="myModalLabel4">Calorie Tracker - Firebase</h4>
+          </div>
+          <div class="modal-body">
+            <a href="https://jnpj1.github.io/health-tracker-firebase/" target="_blank">
+              <picture>
+                <source srcset="images/firebasetracker-small.png" media="(max-width: 700px)">
+                <img src="images/firebasetracker-large.png" class="img-responsive" alt="Calorie Tracker"
+                  title="View on GitHub Pages">
+              </picture>
+            </a>
+            <p class="modal-text">Single-page, responsive app to tally and track daily calorie counts, built using Backbone.js and Firebase.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </aside>
+    <aside class="modal fade" id="project5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel5" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title" id="myModalLabel5">Girls vs. Bugs Arcade Game</h4>
           </div>
           <div class="modal-body">
             <a href="https://jnpj1.github.io/arcade-game/" target="_blank">
@@ -185,11 +249,11 @@
         </div>
       </div>
     </aside>
-    <aside class="modal fade" id="project4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel4" aria-hidden="true">
+    <aside class="modal fade" id="project6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel6" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title" id="myModalLabel4">Cat Clicker</h4>
+            <h4 class="modal-title" id="myModalLabel6">Cat Clicker</h4>
           </div>
           <div class="modal-body">
             <a href="https://jnpj1.github.io/cat-clicker/" target="_blank">
@@ -206,11 +270,11 @@
         </div>
       </div>
     </aside>
-    <aside class="modal fade" id="project5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel5" aria-hidden="true">
+    <aside class="modal fade" id="project7" tabindex="-1" role="dialog" aria-labelledby="myModalLabel7" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title" id="myModalLabel5">Website Performance Optimization</h4>
+            <h4 class="modal-title" id="myModalLabel7">Website Performance Optimization</h4>
           </div>
           <div class="modal-body">
             <a href="http://jnpj1.github.io/performance-optimization/" target="_blank">
@@ -228,11 +292,11 @@
         </div>
       </div>
     </aside>
-    <aside class="modal fade" id="project6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel6" aria-hidden="true">
+    <aside class="modal fade" id="project8" tabindex="-1" role="dialog" aria-labelledby="myModalLabel8" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title" id="myModalLabel6">Blog Image Optimization</h4>
+            <h4 class="modal-title" id="myModalLabel8">Blog Image Optimization</h4>
           </div>
           <div class="modal-body">
             <a href="https://jnpj1.github.io/responsive-image-blog/" target="_blank">
